objects/ServiceResourceCapacity.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSLDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__HoursInUse__c</fullName>
        <formula>FSL__MinutesUsed__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours In Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MinutesUsed__c</fullName>
        <label>Minutes Used</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Work_Items_Allocated__c</fullName>
        <label>Work Items Allocated</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>